<resources>
    <string name="app_name">TriviaApp</string>
    <string name="add_question">ADD QUESTION</string>
    <string name="take_quiz">TAKE QUIZ</string>
    <string name="delete_quiz">DELETE QUIZ</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="enter_question">Enter question here</string>
    <string name="enter_correct">Enter CORRECT answer here</string>
    <string name="enter_incorrect">Enter INCORRECT answer here</string>
    <string name="save_question">SAVE QUESTION</string>
    <string name="user_Q_output">user question output here</string>
    <string name="A">A.</string>
    <string name="B">B.</string>
    <string name="C">C.</string>
    <string name="D">D.</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="incorrect_corrected">Incorrect. The correct answer is %1$s.</string>
    <string name="correct">Correct!</string>
    <string name="dialog_message">You have reached the end of this quiz. Your final score is %1$d out of %2$d.</string>
    <string name="dialog_title">CONGRATULATIONS!</string>
    <string name="main_menu">Return to main menu</string>
    <string name="wrongwrong">NOPE! YOU\'RE DUMB!</string>
</resources>
